--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.20",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.10.0",
     "eslint-plugin-astro": "^1.2.4",
