--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -18,6 +18,8 @@
     "@sanity/client": "^6.21.3",
     "astro": "^4.15.7",
     "astro-portabletext": "^0.10.0",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "lenis": "^1.1.13",
     "react-hook-form": "^7.53.0",
     "sharp-ico": "^0.1.5",
