--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/partytown": "^2.1.2",
     "@astrojs/preact": "^3.5.3",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.8.1",
