Add VERCEL_DEPLOYMENT_ID for turbo.json configuration

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".vercel/**"],
-      "env": ["VERCEL_ENV"]
+      "env": ["VERCEL_ENV", "VERCEL_DEPLOYMENT_ID"]
     },
     "lint": {
       "dependsOn": ["^lint"]
