--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -11,27 +11,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/preact": "^3.5.3",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/vercel": "^7.8.1",
-    "@sanity/client": "^6.22.0",
-    "astro": "^4.15.9",
-    "astro-portabletext": "^0.10.0",
-    "autoprefixer": "^10.4.20",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/preact": "^4.0.5",
+    "@astrojs/vercel": "^8.1.2",
+    "@sanity/client": "^6.28.3",
+    "astro": "^5.4.3",
+    "astro-portabletext": "^0.11.1",
+    "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.6",
-    "lenis": "^1.1.13",
-    "react-hook-form": "^7.53.0",
-    "sharp-ico": "^0.1.5",
-    "typescript": "^5.6.2"
+    "lenis": "^1.2.3",
+    "react-hook-form": "^7.54.2",
+    "sharp-ico": "^0.1.5"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.20",
-    "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-astro": "^1.2.4",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "sass": "^1.79.3"
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "sass": "^1.85.1"
   },
   "overrides": {
     "react": "bun:@preact/compat@latest",
