--- a/apps/sanity/package.json
+++ b/apps/sanity/package.json
@@ -15,19 +15,16 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.58.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sanity": "^3.58.0",
-    "sanity-plugin-iframe-pane": "^3.1.6",
-    "sanity-plugin-media": "^2.3.2",
-    "styled-components": "^6.1.13"
+    "@sanity/vision": "^3.79.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sanity": "^3.79.0",
+    "sanity-plugin-iframe-pane": "^3.2.1",
+    "sanity-plugin-media": "^3.0.1",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
-    "@sanity/eslint-config-studio": "^4.0.0",
-    "@types/react": "^18.3.9",
-    "eslint": "^9.11.1",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.2"
+    "@sanity/eslint-config-studio": "^5.0.2",
+    "@types/react": "^19.0.10"
   }
 }
