--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "^2.1.2"
+    "turbo": "^2.4.4",
+    "typescript": "^5.8.2",
+    "eslint": "^9.22.0",
+    "prettier": "^3.5.3"
   },
   "engines": {
     "node": ">=18"
